Some notes on 3d N=1 theories

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1081,9 +1081,12 @@ $0 = \{Q_\alpha,Q_\beta\} =
 in 3d $\Nsusy=2$ also linear multiplets ($\epsilon^{\alpha\beta} D_\alpha D_\beta\Sigma=0=\epsilon^{\alpha\beta}\overline{D}_\alpha\overline{D}_\beta\Sigma$);
 in 2d $\Nsusy=(2,2)$ also twisted vector, twisted chirals, semichirals, \ldots{}
 
-\paragraph{For \(2\) supercharges}, vector, chiral, linear, Fermi, \ldots{}
+\paragraph{For \(2\) supercharges:}
+in 3d $\Nsusy=1$ and 2d $\Nsusy=(1,1)$, vector and real;
+in 2d $\Nsusy=(2,0)$, vector, chiral, Fermi;
+also linear,~\ldots{}
 
-\subsection{Other supermultiplets}
+\subsection{Some other supermultiplets}
 
 6d $\Nsusy=(2,0)$ tensor multiplet with self-dual two-form gauge field~$B$ (namely $\dd{B}=\star\dd{B}$), four spinors, five scalars.
 
@@ -1241,6 +1244,15 @@ R-symmetry: $\Lie{SU}(2)$, times $\Lie{U}(1)$ if $W$~has charge~$2$.
 \subsection{Theories with \(2\) supercharges}
 
 \paragraph{3d \(\Nsusy=1\)}
+Data: gauge group~$G$, real multiplets $\phi$ in a representation~$V$ of~$G$,
+real ``superpotential'' $W(\phi,D\phi,\ldots)$.
+
+$W$~is a pseudo-scalar under time-reversal.
+Focus on~$W$ at zero-momentum (set all derivatives to zero).
+In a time-reversal invariant theory of scalar (not pseudo-scalar) real superfields there can be no zero-momentum superpotential $\implies$ exact real flat directions.
+
+Time-reversal symmetry requires $\Lie{U}(1)$ gauge factors to have zero Chern--Simons level.
+
 
 \paragraph{2d \(\Nsusy=(0,2)\)}
 
