Reorganize spin <=1 supermultiplets

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1072,16 +1072,26 @@ $0 = \{Q_\alpha,Q_\beta\} =
 
 \subsection{Spin \(\leq 1\) supermultiplets}
 
-\paragraph{For \(16\) supercharges}, there is only the vector multiplet.
+Here ``$n$-susy'' means the algebra with $n$ supercharges.
+See in parentheses how multiplets decompose into $n/2$-susy multiplets.
 
-\paragraph{For \(8\) supercharges}, vector multiplet and (half-)hypermultiplet; in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
+\paragraph{\(16\)-susy multiplets:}\\
+vector ($8$-susy vector multiplet and adjoint hypermultiplet).
+
+\paragraph{\(8\)-susy multiplets:}\\
+vector multiplet ($4$-susy vector and adjoint chiral multiplets),\linebreak
+hypermultiplet (two conjugate $4$-susy chiral multiplets)\linebreak
+and half-hypermultiplet (self-conjugate $4$-susy chiral multiplet);\linebreak
+in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
 % TODO: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\thetacoordinate}F(\Phi)$
 
-\paragraph{For \(4\) supercharges}, vector ($V=V^\dagger$) and chiral ($\overline{D}_{\dot{\alpha}}X=0$) multiplets;
-in 3d $\Nsusy=2$ also linear multiplets ($\epsilon^{\alpha\beta} D_\alpha D_\beta\Sigma=0=\epsilon^{\alpha\beta}\overline{D}_\alpha\overline{D}_\beta\Sigma$);
+\paragraph{\(4\)-susy:}
+vector ($V=V^\dagger$)
+and chiral ($\overline{D}_{\dot{\alpha}}X=0$) multiplets;
+in 3d $\Nsusy=2$ also linear multiplets ($\epsilon^{\alpha\beta} D_\alpha D_\beta\Sigma=0=\epsilon^{\alpha\beta}\overline{D}_\alpha\overline{D}_\beta\Sigma$) with lowest component a real scalar;
 in 2d $\Nsusy=(2,2)$ also twisted vector, twisted chirals, semichirals, \ldots{}
 
-\paragraph{For \(2\) supercharges:}
+\paragraph{\(2\)-susy:}
 in 3d $\Nsusy=1$ and 2d $\Nsusy=(1,1)$, vector and real;
 in 2d $\Nsusy=(2,0)$, vector, chiral, Fermi;
 also linear,~\ldots{}
