--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1221,7 +1221,12 @@ $W_\alpha=-\frac{1}{4}\overline{D}\overline{D}\rme^{-V}D_\alpha \rme^V$ and $\ov
 
 \paragraph{Wess-Zumino model:} chiral multiplet~$\phi$ with superpotential $W=m\phi^2+g\phi^3$.
 
-\paragraph{3d \(\Nsusy=2\)} \hepth{9703110}
+\paragraph{3d \(\Nsusy=2\)} \arxiv{hep-th/9703110,1305.1633}
+Data: gauge group~$G$, Chern--Simons levels, chiral multiplets $\phi$ in a complex representation~$V$ of~$G$,
+holomorphic superpotential $W(\phi)$.  Gauge couplings run: $g\sim M^{1/2}$.
+
+In SCFT, $\dim(X)\geq R_{\text{IR}}(X)$, equality for $X$ (anti)chiral.
+The R-symmetry can mix with (possibly accidental) Abelian flavour symmetry.
 
 In Abelian theories or (only approximately) deep in the Coulomb branch,
 the dual photon $\gamma$ (a periodic real scalar) is defined by $\dd\gamma=J_T=\star F$ where $J_T$ is the topological current.
