--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1394,6 +1394,13 @@ where $x\in\RR^{p,1}$ and $y\in\RR^{10-p}$.  In the near horizon $y\to 0$ these 
 
 \paragraph{Branes} IIA strings: D0, F1 (strings), D2, D4, O4$^{\pm}$, $\widetilde{\mathrm{O4}}^+$, NS5, D6, D8 (wall), O8 (wall), \etc{}.  IIB strings: D$(-1)$, F1 (strings), D1, D3, $(p,q)$ 5-branes (includes D5 and NS5), O5$^{\pm}$, $\widetilde{\mathrm{O5}}^+$, D7, O7$^{\pm}$, ON$^0$, \etc{}.  M-theory: M2, M5, OM5, M9.
 
+\paragraph{Exotic branes.}
+In type II, denote $b_n^{(\dots,d,c)}$ a brane whose mass scales like $l_s^{-1} g_s^{-n} \prod_{i=1}^{9} (R_i/l_s)^{p_i}$ in terms of the radii~$R_i$,
+where $b=\#\{p_i=1\}$, $c=\#\{p_i=2\}$, $d=\#\{p_i=3\}$, \dots{}
+E.g.\@, $\text{F1}\equiv 1_0$, $\text{D3}\equiv 3_1$, $\text{NS5}\equiv 5_2$, $\text{KK}\equiv 5_2^1$.
+Many exotic branes are codimension $\leq 2$, non-geometric, defined using duality transformations, typically have $n\geq 3$ except the $7$-brane $5_2^2$.
+Extensive taxonomy in \arxiv{1806.00430} (their Figure 1 lists S/T-duality orbit of F1).
+
 \paragraph{Flat space brane configurations} Flat space preserves $32$ supercharges.
 One stack of parallel branes breaks half; two stacks break all unless:
 D$p$ and D$q$ have $0$, $4$ or $8$ directions that one brane spans and not the other;
