Change accidental symmetry to emergent symmetry

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -878,13 +878,13 @@ Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 
 \paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\thetacoordinate W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\thetacoordinate[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
 
-\paragraph{An accidental symmetry} is a flavour symmetry of the IR but not of the UV.
+\paragraph{An emergent symmetry} is a flavour symmetry of the IR but not of the UV.
 
 \paragraph{R-symmetry.}
 In 2d and higher the IR R-symmetry is part of the superconformal algebra, rather than an outer automorphism of it.
 The manifest (UV) R-symmetry can be a mixture of the IR R-symmetry and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
-For nonabelian R-symmetry that flavour symmetry must be accidental as it does not commute with~$R_{\text{UV}}$.
-For abelian R-symmetry the mixing is continuous; assuming no accidental flavour symmetries it is fixed
+For nonabelian R-symmetry that flavour symmetry must be emergent as it does not commute with~$R_{\text{UV}}$.
+For abelian R-symmetry the mixing is continuous; assuming no emergent flavour symmetries it is fixed
 in 4d $\Nsusy=1$ by $a$-extremization, in 3d $\Nsusy=2$ by $Z_{S^3}$-extremization, in 2d $\Nsusy=(0,2)$ by $c$-extremization.
 
 Vector multiplet scalars and gauge field are $U(1)_R$ neutral.
@@ -1300,7 +1300,7 @@ Data: gauge group~$G$, Chern--Simons levels, chiral multiplets $\phi$ in a compl
 holomorphic superpotential $W(\phi)$.  Gauge couplings run: $g\sim M^{1/2}$.
 
 In SCFT, $\dim(X)\geq R_{\text{IR}}(X)$, equality for $X$ (anti)chiral.
-The R-symmetry can mix with (possibly accidental) Abelian flavour symmetry.
+The R-symmetry can mix with (possibly emergent) Abelian flavour symmetry.
 
 In Abelian theories or (only approximately) deep in the Coulomb branch,
 the dual photon $\gamma$ (a periodic real scalar) is defined by $\dd\gamma=J_T=\star F$ where $J_T$ is the topological current.
@@ -1513,7 +1513,7 @@ Has AdS/CFT dual with linear dilaton background.
 \paragraph{IR duality:} the ``electric'' theory A has the same IR limit as the ``magnetic'' theory B\@:
 TQFT\@, SCFT\@, free theory, infinite flow, or sum of products thereof.
 
-Gauge-invariant chirals $\Operator$ of trial R-charge $\leq 2/3$ are free and of true IR R-charge $2/3$ thanks to mixing with accidental $\lie{u}(1)$ acting on~$\Operator$.
+Gauge-invariant chirals $\Operator$ of trial R-charge $\leq 2/3$ are free and of true IR R-charge $2/3$ thanks to mixing with emergent $\lie{u}(1)$ acting on~$\Operator$.
 Other view: given a term $\delta W$, trial R-charge obeys $R(\delta W)=2$ but true R-charge maybe $R(\delta W)>2$; then $\delta W$ is irrelevant and leaves some chiral free.
 
 Typical evidence: global symmetries, 't~Hooft anomaly matching, moduli space of vacua, chiral rings, behaviour of these under F-term deformations,
