Change layout to small pages

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -3,7 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 %\usepackage{savetrees}
-\usepackage[margin=1.2cm]{geometry}
+\usepackage[paperwidth=282.230648pt,paperheight=399.13441pt,width=268.00427pt,top=7.113189pt,bottom=15pt,footskip=10pt]{geometry}
 \usepackage{xcolor}
 \usepackage{microtype}
 \usepackage{amsmath}
@@ -326,11 +326,12 @@
 \ExplSyntaxOff
 
 \begin{document}
-\twocolumn\raggedbottom
+
+\raggedbottom
 
 \noindent\textbf{\Large Tables for supersymmetry.}
 
-\noindent{\scriptsize Bruno Le Floch, Princeton University, 2018.\\
+\noindent{\scriptsize Bruno Le Floch, \'Ecole Normale Sup\'erieure, 2019.\\
 Very sparse references, not always to original papers.\\
 Help welcome at
 \url{https://github.com/blefloch/tables-for-supersymmetry}
@@ -1174,7 +1175,7 @@ Recombinations as $\Delta\to j/2+\abs{r}+1$:
 Absolutely protected: $B\Bbar$ (unit operator).
 Absolutely protected if R-charges are quantized: free chiral $A\Bbar$, chirals $L\Bbar_1[0]^{(r)}_r$ with $\frac{1}{2}<r<2$, and their conjugates.
 
-\paragraph{3d \(\Nsusy\geq 3\) algebra \(\lie{osp}(\Nsusy|4)\).}
+\paragraph{3d \texorpdfstring{\(\Nsusy\geq 3\)}{N>2} algebra \(\lie{osp}(\Nsusy|4)\).}
 Supercharges $Q\in[1]^{(R_Q)}_{1/2}$ with $R_Q=(1,0,\dots)$ for $\Nsusy\geq 5$, $R_Q=(1,1)$ for $\Nsusy=4$, $R_Q=(2)$ for $\Nsusy=3$.
 Let $\Delta_A=\frac{1}{2}j+h_1+1$ and $\Delta_B=h_1$ with
 $h_1=R_1+\dots+R_{k-2}+\frac{1}{2}R_{k-1}+\frac{1}{2}R_k$ for $\Nsusy=2k$
