Fix arXiv links to pre-unification papers

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -318,12 +318,12 @@
     ]
   }
 \newcommand{\hepth}{ \__my_link_clist:Nn \hepthaux }
-\newcommand{\hepthaux}[1]{\href{http://arXiv.org/abs/hep-th/#1}{hep-th/#1}}
 \newcommand{\arxiv}{ \__my_link_clist:Nn \arxivaux }
-\newcommand{\arxivaux}[1]{\href{http://arXiv.org/abs/#1}{#1}}
 \newcommand{\inspire}{ \__my_link_clist:Nn \inspireaux }
-\newcommand{\inspireaux}[1]{\href{http://inspirehep.net/record/#1}{inspire:#1}}
 \ExplSyntaxOff
+\newcommand{\hepthaux}[1]{\href{https://arxiv.org/abs/hep-th/#1}{hep-th/#1}}
+\newcommand{\arxivaux}[1]{\href{http://arXiv.org/abs/#1}{#1}}
+\newcommand{\inspireaux}[1]{\href{http://inspirehep.net/record/#1}{inspire:#1}}
 
 \begin{document}
 
