A bit on 3d N=2 dualities

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1509,7 +1509,11 @@ Has AdS/CFT dual with linear dilaton background.
 
 \section{Dualities}
 
-\subsection{4d \(\Nsusy=1\) dualities}
+\subsection{4d \(\Nsusy=2,4\) S-duality}
+
+\subsection{4d \(\Nsusy=1\) conformal dualities}
+
+\subsection{4d \(\Nsusy=1\) IR dualities}
 
 \paragraph{IR duality:} the ``electric'' theory A has the same IR limit as the ``magnetic'' theory B\@:
 TQFT\@, SCFT\@, free theory, infinite flow, or sum of products thereof.
@@ -1677,7 +1681,21 @@ Brodie, Intriligator--Pouliot,\\
 Argyres--Intriligator--Leigh--Strassler, Klebanov cascade,\\
 Intriligator--Leigh--Strassler, Kutasov--Lin.
 
-\subsection{3d dualities}
+\subsection{3d \(\Nsusy=4\) dualities}
+
+3d $\Nsusy=4$ mirror symmetry exchanging Coulomb and Higgs branches.
+Self-mirror $T[SU(N)]$.
+
+\subsection{3d \(\Nsusy=2\) IR dualities}
+
+3d $\Nsusy=2$ Aharony \hepth{9703215}, Giveon--Kutasov, Aharony--Fleischer dualities (IR).
+
+3d $\Nsusy=2$ mirror symmetry exchanging Coulomb and Higgs branches.
+
+$U(N)$ with $N_f(\square\oplus\overline{\square})$ and $W=M_++M_-$ (monopoles)
+dual to same with $N'=N_f-N-2$ and dual mesons \arxiv{1703.08460}
+
+\subsection{3d non-supersymmetric IR dualities}
 
 We recall $\Lie{Sp}(n)=\Lie{USp}(2n)$.
 
@@ -1731,12 +1749,6 @@ The duality is then $X(N)_{k-F/2},S\phi,F\psi$ $\leftrightarrow$ $X'(k)_{-N+S/2}
 2d $\Nsusy=(2,2)$ Hori--Tong ($\Lie{SU}$), Hori ($\Lie{Sp}$, $\Lie{SO}$ groups), plus adjoint (ADE-type and $(2,2)^*$-like) dualities (IR).
 
 2d $\Nsusy=(2,2)$ Hori--Vafa/Hori--Kapustin duality of gauged linear sigma models and Landau--Ginzburg models (IR).
-
-3d Chern--Simons level-rank duality.
-
-3d $\Nsusy=2$ Aharony, Giveon--Kutasov, Aharony--Fleischer dualities (IR).
-
-3d $\Nsusy=2$ and $\Nsusy=4$ mirror symmetry exchanging Coulomb and Higgs branches (IR).
 
 S-duality of 4d $\Nsusy=2$ gauge theories (exact).
 
