--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -772,7 +772,7 @@ Exception: $\lie{UQ}(p-1,q)=\lie{UQ}(q-1,p)$.
 
 \section{Quantum field theory}
 
-\subsection{Generalities}
+\subsection{Building blocks}
 
 \paragraph{Yang--Mills term.} A gauge group is a compact reductive Lie group~$G$ such as $(\Lie{SU}(3)\times\Lie{SU}(2)\times\Lie{U}(1))/\ZZ_6$.
 The gauge kinetic term is $\mathcal{L}_{\text{SYM}}=g^{-2}\Tr F\wedge\star F$, with one real gauge coupling~$g$ per simple factor.
@@ -782,21 +782,23 @@ In 4d, $\thetaangle$ and $g$ combine to $\tau=\thetaangle/(2\pi)+4\pi i/g^2$.
 
 \paragraph{Chern--Simons term} in 3d: $k\Tr\bigl(A\wedge\dd{A}+\frac{2}{3}A\wedge A\wedge A\bigr)$ with $k$~quantized (normalization missing).
 
+\subsection{Symmetries}
+
+\paragraph{Global symmetries} include Poincar\'e or conformal, flavour symmetries, R-symmetries.
+Not always all manifest.  In a given QFT description, ``electric''  flavour symmetries act on matter.
+
+\paragraph{Topological/magnetic flavour symmetry} of a gauge field with gauge group~$\Lie{G}$:
+$\Hom(\pi_1(\Lie{G}),\Lie{U}(1))$.
+
+\paragraph{An emergent symmetry} is a flavour symmetry of an IR CFT, absent in some UV description.
+
 \paragraph{Boundaries and gauge redundancies.}
 On a non-compact spacetime one can consider the group of gauge redundancies with various boundary conditions.
 Let $H\subset F$ be the constant transformations included as gauge redundancies (including constant gauge transformations by $H\cap G$).
-The Higgs branch flavour symmetry is then $\{x\in F\mid xG=Gx,xH=Hx\}/H$.
-
-\paragraph{Loops.}
-A Polyakov loop is just a Wilson loop in the fundamental representation and wrapping the time direction.
-% Also describe Wilson, 't Hooft, dyonic, vortex loops
-
-\paragraph{A redundant operator}
-is $\Operator$ such that $\langle\Operator(p)\Operator(-p)\rangle$ is polynomial in the momentum~$p$;
-equivalently, $\langle\Operator(x)\Operator(y)\rangle$ vanishes at separated points.
+The (electric) flavour symmetry is then $\{x\in F\mid xG=Gx,xH=Hx\}/H$.
 
 \paragraph{An abelian \(q\)-form symmetry} \arxiv{1412.5148}
-(for $q=0$ this is a standard flavor symmetry and can be nonabelian)
+(for $q=0$ this is a standard flavour symmetry and can be nonabelian)
 is a $(q+1)$-form current $J$ such that $\mathrm{d}{\star J}=0$;
 it couples as $\int B\wedge{\star J}$ to a background $(q+1)$-form gauge field~$B$ with gauge transformation $B\to B+\mathrm{d}\Lambda$.
 
@@ -879,8 +881,6 @@ Canonical kinetic term for bosons: $D_\mu\phi_i D^\mu\phi_i$.
 
 \paragraph{Superpotential term.} For $4$ supercharges, $\int\dd[^2]\thetacoordinate W$ gives a potential for scalars and Yukawa-type interactions.  $W$~is holomorphic in chiral fields and in couplings seen as background fields.  Example: the kinetic term $\Im \int\dd[^2]\thetacoordinate[\tau W_\alpha^2]$ of an abelian gauge field: $W_\alpha^2$ is a chiral field so $\tau$ is the background value of a chiral field.
 
-\paragraph{An emergent symmetry} is a flavour symmetry of the IR but not of the UV.
-
 \paragraph{R-symmetry.}
 In 2d and higher the IR R-symmetry is part of the superconformal algebra, rather than an outer automorphism of it.
 The manifest (UV) R-symmetry can be a mixture of the IR R-symmetry and of a flavour symmetry:  $R_{\text{UV}}\subset R_{\text{IR}}\times F$.
@@ -899,6 +899,19 @@ For $8$~supercharges, Higgs branch parametrized by hypermultiplet scalars: hyper
 The Higgs branch has flavour symmetry $\{x\in F\mid xG=Gx\}/G$ normalizer of $G$ in $F=\Lie{U}(R)$ or $F=\Lie{USp}(\widetilde{R})$ modulo~$G$.
 Background vector multiplet scalars (real/twisted masses) reduce the Higgs and mixed branches to fixed points of corresponding flavour symmetries.
 
+\subsection{Other}
+
+\paragraph{Loops.}
+A Polyakov loop is just a Wilson loop in the fundamental representation and wrapping the time direction.
+% Also describe Wilson, 't Hooft, dyonic, vortex loops
+
+\paragraph{A redundant operator}
+is $\Operator$ such that $\langle\Operator(p)\Operator(-p)\rangle$ is polynomial in the momentum~$p$;
+equivalently, $\langle\Operator(x)\Operator(y)\rangle$ vanishes at separated points.
+
+\paragraph{Resurgence} see \arxiv{1909.05262} in supersymmetric theories.
+
+\section{Spinors, supersymmetry}
 
 \subsection[Spinors]{Spinors \normalsize\textnormal{(e.g.\@ \hepth{9910030})}}
 
@@ -993,8 +1006,6 @@ S^2\mathcal{S}_{\pm} & 1^{\dagger} & 2^{\dagger} & 3^{\dagger} & 0,4^{\dagger} &
 \mathcal{S}_{+}\otimes\mathcal{S}_{-} & 0 & 1 & 0,2 & 1,3 & 0,2,4 & 1,3,5\\
 \end{tab}
 
-
-\section{Supersymmetry}
 
 \subsection{Generalities}
 
@@ -1122,7 +1133,7 @@ $\overline{D}^{\dot{\alpha}}S_{\alpha\dot{\alpha}}=\chi_\alpha+D_\alpha X$, with
 contains both stress tensor and R-symmetry current and sources 16/16 supergravity.
 
 
-\subsection{Unitary superconformal irreps}
+\subsection{Unitary SCFT irreps}
 
 See \arxiv{1612.00809}, in Lorentzian signature;
 $[j_1,\dots]_\Delta^{(R_1,\dots)}$ denotes a conformal family whose primary has Dynkin labels $\vec{j}$ and $\vec{R}$ (in $\ZZ_{\geq 0}$) for Lorentz and R-symmetry, and dimension~$\Delta$;
@@ -1509,7 +1520,15 @@ Has AdS/CFT dual with linear dilaton background.
 
 \section{Dualities}
 
+\subsection{5d dualities}
+
+\arxiv{1909.05250}
+
 \subsection{4d \(\Nsusy=2,4\) S-duality}
+
+S-duality of 4d $\Nsusy=4$ SYM (exact).
+
+S-duality of 4d $\Nsusy=2$ gauge theories (exact), see \arxiv{0904.2715}.
 
 \subsection{4d \(\Nsusy=1\) conformal dualities}
 
@@ -1749,10 +1768,6 @@ The duality is then $X(N)_{k-F/2},S\phi,F\psi$ $\leftrightarrow$ $X'(k)_{-N+S/2}
 2d $\Nsusy=(2,2)$ Hori--Tong ($\Lie{SU}$), Hori ($\Lie{Sp}$, $\Lie{SO}$ groups), plus adjoint (ADE-type and $(2,2)^*$-like) dualities (IR).
 
 2d $\Nsusy=(2,2)$ Hori--Vafa/Hori--Kapustin duality of gauged linear sigma models and Landau--Ginzburg models (IR).
-
-S-duality of 4d $\Nsusy=2$ gauge theories (exact).
-
-S-duality of 4d $\Nsusy=4$ SYM (exact).
 
 \subsection{String theory dualities}
 
